--- a/WP5/D5.2/report.tex
+++ b/WP5/D5.2/report.tex
@@ -159,7 +159,7 @@ merged into its master branch (see
 \url{https://github.com/serge-sans-paille/pythran/pull/614}).
 
 The modifications necessary within the Cython project are currently reviewed
-(see TODO).
+(see \url{https://github.com/cython/cython/pull/1607}).
 
 \printbibliography
 \end{document}
