--- a/WP5/D5.2/report.tex
+++ b/WP5/D5.2/report.tex
@@ -15,7 +15,7 @@
 \deliverydate{02/27/2017}
 \duedate{02/27/2017 (Month 18)}
 \def\pn{OpenDreamKit}
-\author{Adrien Guinet} 
+\author{}
 
 \begin{document}
 \maketitle
@@ -77,7 +77,7 @@ The integration within Cython works this way:
     This fused type is whether a Pythran numpy buffer or the original Cython
     buffer type
   \item for variable defined as numpy array, we change them directly to a
-    Pythran buffer, if their type and endianess are supported. 
+    Pythran buffer, if their type and endianess are supported.
 \end{itemize}
 
 Cython has a comprehensive suite test regarding the Numpy features it supports.
@@ -94,8 +94,19 @@ installation must be provided.
 
 Here is an example of usage using {\tt distutils}:
 
-More detailed example are provided in the documentation (within the Cython PR,
-see section~\ref{sec:links}).
+\begin{lstlisting}[language=python]
+from distutils.core import setup
+from Cython.Build import cythonize
+
+setup(
+    name = "My hello app",
+    ext_modules = cythonize('hello_pythran.pyx', np_pythran=True)
+)
+\end{lstlisting}
+
+Basically, a flag {\tt np\_pythran} has been added to the {\tt cythonize} call
+that will enable the usage of the Pythran backend. It needs to have the Pythran
+module installed.
 
 \section{Benchmarks}
 
@@ -122,6 +133,47 @@ instructions.
 \begin{figure}[h]
   \caption{\label{fig:float_bench} Float computation benchmark (logarithmic scales)}
   \includegraphics{benchs/float/graph.pdf}
+\end{figure}
+
+For instance, for $N = 1000000$, we have a speedup of ~2.4x using the Pythran
+backend (against the original Cython version), and ~3.7x using SIMD
+instructions (still against the original Cython version).
+
+\subsection{Harris}
+
+This benchmark is based on the code available here:
+\url{https://raw.githubusercontent.com/serge-sans-paille/numpy-benchmarks/master/benchmarks/harris.py}.
+
+The adapted Cython code is the following:
+
+\begin{lstlisting}[language=python]
+import numpy
+cimport numpy
+
+def harris(numpy.ndarray[numpy.float_t, ndim=2] I):
+  cdef int m = I.shape[0]
+  cdef int n = I.shape[1]
+  cdef numpy.ndarray[numpy.float_t, ndim=2] dx = \
+    (I[1:, :] - I[:m-1, :])[:, 1:]
+  cdef numpy.ndarray[numpy.float_t, ndim=2] dy = \
+    (I[:, 1:] - I[:, :n-1])[1:, :]
+
+  cdef numpy.ndarray[numpy.float_t, ndim=2] A = dx * dx
+  cdef numpy.ndarray[numpy.float_t, ndim=2] B = dy * dy
+  cdef numpy.ndarray[numpy.float_t, ndim=2] C = dx * dy
+  cdef numpy.ndarray[numpy.float_t, ndim=2] tr = A + B
+  cdef numpy.ndarray[numpy.float_t, ndim=2] det = A * B - C * C
+  return det - tr * tr
+\end{lstlisting}
+
+The figure~\ref{fig:harris_bench} shows the compute time for various sizes of
+the 2D array I ($N \times N$). We've got a ~25 \% improvement with an array of
+$4096 \times 4096$ floats as input using the Pythran backend. Moreover, in this
+case, it seems that this code does not really benefits from SIMD instructions.
+
+\begin{figure}[h]
+  \caption{\label{fig:harris_bench} Harris computation benchmark}
+  \includegraphics{benchs/harris/graph.pdf}
 \end{figure}
 
 \subsection{Convolution}
@@ -152,7 +204,7 @@ instructions in this case. We thus still got an average speedup of ~3 \%.
 \section{Links}
 \label{sec:links}
 
-Modifications that were necessary to the Pythran project has been accepted and
+Modifications that were necessary to the Pythran project have been accepted and
 merged into its master branch (see
 \url{https://github.com/serge-sans-paille/pythran/pull/629},
 \url{https://github.com/serge-sans-paille/pythran/pull/628},
